--- a/papers/asprs2017.tex
+++ b/papers/asprs2017.tex
@@ -135,7 +135,7 @@ independence between all images and measurements.
 
 The goal is therefore to determine the ground location that minimizes the weighted
 sum of image measurement and sensor parameter deviations using non-linear least
-squares. Let $\grnd = [X, Y, Z]'$ be the an apriori estimate of the position of 
+squares. Let $\grnd = [X, Y, Z]'$ be an apriori estimate of the position of 
 the ground point being geolocated.
 $\imgmeas = [x_{i}, y_{i}]'$ is the measurement of the ground
 point in the $i$th image.  The sensor parameters for the $i$th image are
